--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -1,10 +1,25 @@
 
 <!-- the FormBuilder object - represented by f - is used to build here -->
 <!-- you then call to submit on the f object -->
+<% if @restaurant.errors.any? %>
+  <div id="error_explanation">
+    <h2><%= pluralize(@restaurant.errors.count, "error") %> prohibited this restaurant from being saved:</h2>
+ 
+    <ul>
+    <% @restaurant.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end %>
+
 <%= form_for @restaurant do |f| %>
 	<%= f.label :name %>
 	<%= f.text_field :name, placeholder: 'Enter restaurant name' %>
-	<%= f.label :cuisine %>
-	<%= f.text_field :name, placeholder: 'Enter cuisine type' %>
-	<%= f.submit  'Add restaurant' %>
+	<%= f.submit 'Submit' %>
 <% end %>
+
+
+
+
+
