--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,13 +1,16 @@
 <h1>Welcome</h1>
 
 <% if @restaurants.any? %>
-<!-- the @restaurants is teh instance var of the array -->
-	<% @restaurants.each do |restaurant| %> 
-		<%= restaurant.name %>
-	<% end %>
-<% else %>
-No restaurants available
-<% end %>
+<!-- the @restaurants is the instance var of the array -->
+  <% @restaurants.each do |restaurant| %>
+    <h2><%= restaurant.name %></h2>
 
+    <%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %>
+    <%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete %>
+
+  <% end %>
+<% else %>
+  No restaurants available
+<% end %>
 <!-- <a href='/restaurants/new'>Add restaurant</a> this is the old method-->
 <%= link_to 'Add restaurant', new_restaurant_path %>
