--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -5,6 +5,7 @@
   <% @restaurants.each do |restaurant| %>
     <h2><%= restaurant.name %></h2>
 
+    <h3>Average rating: <%= star_rating(restaurant.average_rating) %></h3>
     <%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %>
     <%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete %>
     <%= link_to "Review #{restaurant.name}", new_restaurant_review_path(restaurant) %>
