--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -8,7 +8,10 @@
     <h3>Average rating: <%= star_rating(restaurant.average_rating) %></h3>
     <%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %>
     <%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete %>
+
+    <% unless restaurant.has_been_reviewed_by?(current_user) %>
     <%= link_to "Review #{restaurant.name}", new_restaurant_review_path(restaurant) %>
+    <% end %>
 
     <ul>
    	<% restaurant.reviews.each do |review| %>
